src/objects/Case/fields/Admin_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Admin_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Configuration</label>
    <type>Checkbox</type>
</CustomField>