src/objects/Case/fields/Affiliates_Subsidiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliates_Subsidiary_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliates/Subsidiary Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>