src/objects/Case/fields/Allow_admin_login__c.field-meta.xml
<CustomField>
    <fullName>Allow_admin_login__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please deselect if you do not wish Administrator to log in with your credentials.This could potentially delay resolution time of your ticket.</inlineHelpText>
    <label>Allow Admin Log-in</label>
    <type>Checkbox</type>
</CustomField>