src/objects/Case/fields/Annual_industry_conferences_you_attend__c.field-meta.xml
<CustomField>
    <fullName>Annual_industry_conferences_you_attend__c</fullName>
    <description>Annual industry conferences you attend</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Annual industry conferences you attend</inlineHelpText>
    <label>List Regular Annual Industry Conferences</label>
    <type>TextArea</type>
</CustomField>