src/objects/Case/fields/Annual_revenues_CP__c.field-meta.xml
<CustomField>
    <fullName>Annual_revenues_CP__c</fullName>
    <label>Annual Revenues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 5M Euro</fullName>
            </value>
            <value>
                <fullName>5ME -10 ME</fullName>
            </value>
            <value>
                <fullName>10ME -50 ME</fullName>
            </value>
            <value>
                <fullName>50ME - 100 ME</fullName>
            </value>
            <value>
                <fullName>100ME - 500ME</fullName>
            </value>
            <value>
                <fullName>&gt; 500ME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>