src/objects/Case/fields/Anti_corruption_training_to_employees__c.field-meta.xml
<CustomField>
    <fullName>Anti_corruption_training_to_employees__c</fullName>
    <description>Do you provide anti-corruption training to employees within your Company?</description>
    <inlineHelpText>Do you provide anti-corruption training to employees within your Company?</inlineHelpText>
    <label>Anti-Corruption Training to Employees?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>