src/objects/Case/fields/Approved_Countries__c.field-meta.xml
<CustomField>
    <fullName>Approved_Countries__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>