src/objects/Case/fields/Are_you_already_a_Nokia_Direct_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Are_you_already_a_Nokia_Direct_Reseller__c</fullName>
    <label>Are you already a Nokia Direct Reseller?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>