src/objects/Case/fields/Assigned_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Group__c</fullName>
    <label>Assigned Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 2- GSO</fullName>
            </value>
            <value>
                <fullName>Tier 3- Accenture</fullName>
            </value>
            <value>
                <fullName>Tier 3- Salesforce</fullName>
            </value>
            <value>
                <fullName>Tier 3- SDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>