src/objects/Case/fields/Auto_Approved_By_System__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approved By System</label>
    <type>Checkbox</type>
</CustomField>