src/objects/Case/fields/BG_Approval__c.field-meta.xml
<CustomField>
    <fullName>BG_Approval__c</fullName>
    <label>BG Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Microwave</fullName>
            </value>
            <value>
                <fullName>Approved by Nuage</fullName>
            </value>
            <value>
                <fullName>Denied by Microwave</fullName>
            </value>
            <value>
                <fullName>Denied by Nuage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>