src/objects/Case/fields/BG_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BG_Approval_Status__c</fullName>
    <label>BG Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Microwave</fullName>
            </value>
            <value>
                <fullName>Approved by Nauge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>