src/objects/Case/fields/BGs__c.field-meta.xml
<CustomField>
    <fullName>BGs__c</fullName>
    <label>BGs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>FN</fullName>
            </value>
            <value>
                <fullName>ION</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>