src/objects/Case/fields/Branch_Offices__c.field-meta.xml
<CustomField>
    <fullName>Branch_Offices__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Offices</label>
    <length>50</length>
    <type>Text</type>
</CustomField>