src/objects/Case/fields/Bribery_or_corruption__c.field-meta.xml
<CustomField>
    <fullName>Bribery_or_corruption__c</fullName>
    <description>Has your company, any person listed above , any of your company affiliates , any officer, director or owner of your company&apos;s affiliates, or anyone working on behalf of your Company, ever been convicted, fined, indicted or charged in a criminal or regulatory proceeding including any related to bribery or corruption?</description>
    <inlineHelpText>Has your company, any person listed above,or anyone working on behalf of your Company, ever been convicted, fined, indicted or charged in a criminal or regulatory proceeding including any related to bribery or corruption?</inlineHelpText>
    <label>Convicted with Bribery/Corruption?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>