src/objects/Case/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>ION</fullName>
            </value>
            <value>
                <fullName>FN</fullName>
            </value>
            <value>
                <fullName>A&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>