src/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Select cancellation reason. The request status will be changed to Cancelled.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not within CSR scope</fullName>
            </value>
            <value>
                <fullName>Not within SME scope</fullName>
            </value>
            <value>
                <fullName>Cancelled by the requestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>